--- a/src/theme/stylus/page.styl
+++ b/src/theme/stylus/page.styl
@@ -3,9 +3,6 @@
 .page-wrapper {
     box-sizing: border-box
 
-    min-height: 100%
-    width: 100%
-
     // Animation: slide away
     transition: padding-left 0.5s, margin-left 0.5s
 }
