--- a/src/theme/stylus/sidebar.styl
+++ b/src/theme/stylus/sidebar.styl
@@ -13,7 +13,7 @@
     -webkit-overflow-scrolling: touch
 
     // Animation: slide away
-    transition: left 0.5s
+    transition: transform 0.5s
 
     code {
         line-height: 2em;
@@ -21,7 +21,7 @@
 }
 
 .sidebar-hidden .sidebar {
-    left: - $sidebar-width
+    transform: translateX(- $sidebar-width)
 }
 
 .chapter {
